Fix align carbon-netural-span

--- a/css/index.css
+++ b/css/index.css
@@ -316,21 +316,33 @@ footer div span::before {
 }
 
 .footer-links {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1.5fr;
   padding: 0 1.25rem;
-  justify-content: space-around;
-  margin-top: 2rem;
+  height: 8vh;
+  margin: 1rem 0;
 }
 .footer-links-mobile {
   display: none;
   flex-wrap: wrap;
 }
+#carbon-neutral-span {
+  align-self: flex-start;
+  justify-content: flex-start;
+}
 
 .footer-links > :first-child {
-  width: 35%;
+  max-width: 337px;
+  margin-bottom: 0;
+  margin-left: auto;
+  justify-content: space-between;
+  align-self: flex-end;
 }
 .footer-links > :last-child {
-  width: 20%;
+  margin-bottom: 0;
+  max-width: 200px;
+  justify-content: space-between;
+  align-self: flex-end;
 }
 
 .footer-links-mobile div,
